--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,34 @@
 version: "3.7"
 
 services:
-    reverse-proxy:
-        image: "jwilder/nginx-proxy:latest"
-        container_name: "reverse-proxy"
-        volumes:
-            - "html:/usr/share/nginx/html"
-            - "dhparam:/etc/nginx/dhparam"
-            - "vhost:/etc/nginx/vhost.d"
-            - "certs:/etc/nginx/certs"
-            - "/run/docker.sock:/tmp/docker.sock:ro"
-        restart: "always"
-        networks: 
-            - "net"
-        ports:
-            - "80:80"
-            - "443:443"
-            
-    letsencrypt:
-        image: "jrcs/letsencrypt-nginx-proxy-companion:latest"
-        container_name: "letsencrypt-helper"
-        volumes:
-            - "html:/usr/share/nginx/html"
-            - "dhparam:/etc/nginx/dhparam"
-            - "vhost:/etc/nginx/vhost.d"
-            - "certs:/etc/nginx/certs"
-            - "/run/docker.sock:/var/run/docker.sock:ro"
-        environment:
-            NGINX_PROXY_CONTAINER: "reverse-proxy"
-            DEFAULT_EMAIL: "user@domain.com"
-        restart: "always"
-        depends_on:
-            - "reverse-proxy"
-        networks: 
-            - "net"
-            
+  reverse-proxy:
+    image: "jwilder/nginx-proxy:latest"
+    container_name: "reverse-proxy"
+    volumes:
+      - "html:/usr/share/nginx/html"
+      - "dhparam:/etc/nginx/dhparam"
+      - "vhost:/etc/nginx/vhost.d"
+      - "certs:/etc/nginx/certs"
+      - "/run/docker.sock:/tmp/docker.sock:ro"
+    restart: "always"
+    networks: 
+      - "net"
+    ports:
+      - "80:80"
+      - "443:443"
+
+  certbot:
+    image: "certbot/certbot:latest"
+    container_name: "certbot"
+    volumes:
+      - "certs:/etc/letsencrypt"
+      - "/var/www/html:/var/www/html"
+    command: "certbot renew --nginx"
+    depends_on:
+      - "reverse-proxy"
+    networks:
+      - "net"
+
 volumes:
   certs:
   html:
@@ -44,3 +38,4 @@ volumes:
 networks:
   net:
     external: true
+
